--- a/netty-client-sdk/pom.xml
+++ b/netty-client-sdk/pom.xml
@@ -17,5 +17,11 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.2.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 </project>
